nav bar appearing

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
     "rerun-script": "^0.6.0",
-    "sequelize": "^4.37.6"
+    "sequelize": "^4.37.6",
+    "bootstrap": "^4.0.0",
+    "jquery": "^3.3.1"
   }
 }
