purchases page is set up; not yet sending to db

--- a/package.json
+++ b/package.json
@@ -17,19 +17,20 @@
     "angular-route": "^1.6.10",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.0.0",
     "concurrently": "^3.5.1",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "imdb-api": "^3.1.2",
+    "jquery": "^3.3.1",
     "node-sass": "^4.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
+    "popper.js": "^1.14.3",
     "rerun-script": "^0.6.0",
-    "sequelize": "^4.37.6",
-    "bootstrap": "^4.0.0",
-    "jquery": "^3.3.1"
+    "sequelize": "^4.37.6"
   }
 }
